cabal-version:      3.0
name:               atproto-haskell-tap
version:            0.1.0.0
synopsis:           AT Protocol Tap sync client
description:
  Haskell client for Tap, the AT Protocol sync utility.
  Connects to Tap's WebSocket endpoint to receive verified record and
  identity events, and provides HTTP API bindings for managing tracked repos.
license:            MIT
license-file:       LICENSE
author:             Huw Campbell
maintainer:         huw.campbell@gmail.com
category:           Network
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
  ghc-options: -Wall
  default-extensions: OverloadedStrings

library
  import:           warnings
  exposed-modules:
      ATProto.Tap
      ATProto.Tap.Events
      ATProto.Tap.Client
      ATProto.Tap.WebSocket
      ATProto.Tap.Webhook
  build-depends:
      base                        >= 4.14 && < 5
    , bytestring                  >= 0.10 && < 0.13
    , text                        >= 1.2  && < 2.2
    , aeson                       >= 2.0  && < 2.3
    , http-client                 >= 0.7  && < 0.8
    , http-client-tls             >= 0.3  && < 0.4
    , http-types                  >= 0.12 && < 0.13
    , websockets                  >= 0.12 && < 0.14
    , wuss                        >= 1.1  && < 2.1
    , containers                  >= 0.6  && < 0.8
  hs-source-dirs:   src
  default-language: Haskell2010

test-suite atproto-tap-tests
  import:           warnings
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  other-modules:
      Test.ATProto.Tap.Events
  build-depends:
      base                        >= 4.14 && < 5
    , text                        >= 1.2  && < 2.2
    , aeson                       >= 2.0  && < 2.3
    , atproto-haskell-tap
    , hedgehog                    >= 1.4  && < 1.8
  hs-source-dirs:   test
  default-language: Haskell2010
