cabal-version:      3.0
name:               atproto-haskell-xrpc-http
version:            0.1.0.0
synopsis:           http-client-tls backend for the AT Protocol XRPC client
description:
  Provides 'HttpXrpcClient', a concrete implementation of the 'XrpcClient'
  typeclass from @atproto-haskell-xrpc@, backed by @http-client-tls@.
license:            MIT
license-file:       LICENSE
author:             Huw Campbell
maintainer:         huw.campbell@gmail.com
category:           Network
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
  ghc-options: -Wall

library
  import:           warnings
  exposed-modules:
      ATProto.XRPC.Http
  build-depends:
      base                  >= 4.14 && < 5
    , aeson                 >= 2.0  && < 2.3
    , bytestring            >= 0.10 && < 0.13
    , containers            >= 0.6  && < 0.9
    , http-client           >= 0.7  && < 0.8
    , http-client-tls       >= 0.3  && < 0.5
    , http-types            >= 0.12 && < 0.13
    , text                  >= 1.2  && < 2.2
    , atproto-haskell-xrpc
  hs-source-dirs:   src
  default-extensions: OverloadedStrings
  default-language:   Haskell2010

test-suite atproto-xrpc-http-tests
  import:           warnings
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  other-modules:
      Test.ATProto.XRPC.Http
  build-depends:
      base                      >= 4.14 && < 5
    , bytestring                >= 0.10 && < 0.13
    , containers                >= 0.6  && < 0.9
    , text                      >= 1.2  && < 2.2
    , atproto-haskell-xrpc
    , atproto-haskell-xrpc-http
    , hedgehog                  >= 1.4  && < 1.8
  hs-source-dirs:   test
  default-extensions: OverloadedStrings
  default-language:   Haskell2010
