cabal-version:      3.0
name:               atproto-haskell-xrpc
version:            0.1.0.0
synopsis:           AT Protocol XRPC client types and interface
description:
  Port of \@atproto\/xrpc – defines the 'XrpcClient' typeclass and the
  request\/response types for the AT Protocol XRPC transport layer.
license:            MIT
license-file:       LICENSE
author:             Huw Campbell
maintainer:         huw.campbell@gmail.com
category:           Network
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
  ghc-options: -Wall

library
  import:           warnings
  exposed-modules:
      ATProto.XRPC
      ATProto.XRPC.Client
      ATProto.XRPC.Types
  build-depends:
      base        >= 4.14 && < 5
    , bytestring  >= 0.10 && < 0.13
    ,case-insensitive
    , containers  >= 0.6  && < 0.9
    , text        >= 1.2  && < 2.2
    , atproto-haskell-lexicon
  hs-source-dirs:   src
  default-language: Haskell2010
