cabal-version:      3.0
name:               oauth-cli-example
version:            0.1.0.0
synopsis:           AT Protocol OAuth CLI demo
description:
  A minimal command-line application that demonstrates the AT Protocol
  OAuth 2.1 flow (PKCE + PAR + DPoP) using the atproto-haskell libraries.

  Follows the pattern described at
  <https://atproto.com/guides/oauth-cli-tutorial>, ported to Haskell.
license:            MIT
author:             Huw Campbell
maintainer:         huw.campbell@gmail.com
category:           Network
build-type:         Simple

executable oauth-cli
  main-is:          Main.hs
  build-depends:
      base                      >= 4.14 && < 5
    , aeson                     >= 2.0  && < 2.3
    , bytestring                >= 0.10 && < 0.13
    , containers                >= 0.6  && < 0.9
    , http-client               >= 0.7  && < 0.8
    , http-client-tls           >= 0.3  && < 0.5
    , http-types                >= 0.12 && < 0.13
    , text                      >= 1.2  && < 2.2
    , wai                       >= 3.2  && < 3.3
    , warp                      >= 3.3  && < 3.5
    , atproto-haskell-did
    , atproto-haskell-identity
    , atproto-haskell-oauth
    , atproto-haskell-repo
    , atproto-haskell-xrpc
    , atproto-haskell-xrpc-http
  hs-source-dirs:   .
  default-extensions: OverloadedStrings
  default-language:   Haskell2010
  ghc-options:        -Wall -threaded
