cabal-version:      3.0
name:               statusphere-spa-example
version:            0.1.0.0
synopsis:           Statusphere SPA example – Elm frontend, Haskell XRPC backend, Tap sync
description:
  A single-page application version of the Statusphere example.

  Demonstrates:

    * Elm frontend communicating with Haskell backend via XRPC
    * OAuth 2.1 sign-in via @atproto-haskell-oauth@
    * Writing records to the user's PDS via @com.atproto.repo.putRecord@
    * Consuming records via Tap (AT Protocol sync utility)
    * Lex codecs for type-safe encoding\/decoding
    * SQLite persistence with @sqlite-simple@
license:            MIT
author:             Huw Campbell
maintainer:         huw.campbell@gmail.com
category:           Network
build-type:         Simple

executable statusphere-spa
  main-is:          Main.hs
  other-modules:
      Statusphere.Auth
      Statusphere.Database
      Statusphere.Ingester
      Statusphere.Types
  build-depends:
      base                      >= 4.14 && < 5
    , bytestring                >= 0.10 && < 0.13
    , containers                >= 0.6  && < 0.9
    , directory                 >= 1.3  && < 1.4
    , http-types                >= 0.12 && < 0.13
    , text                      >= 1.2  && < 2.2
    , time                      >= 1.9  && < 1.15
    , sqlite-simple             >= 0.4  && < 0.5
    , wai                       >= 3.2  && < 3.3
    , warp                      >= 3.3  && < 3.5
    , http-client               >= 0.7  && < 0.8
    , http-client-tls           >= 0.3  && < 0.5
    , atproto-haskell-did
    , atproto-haskell-identity
    , atproto-haskell-lex
    , atproto-haskell-oauth
    , atproto-haskell-repo
    , atproto-haskell-tap
    , atproto-haskell-xrpc
  hs-source-dirs:   .
  default-extensions: OverloadedStrings
  default-language:   Haskell2010
  ghc-options:        -Wall -threaded
